# dynammo

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp
client/keys/: README
client/res/: tile.blend  tile.blend1
client/res/tiles/: .convert.sh.swp  convert.sh
client/src/config/: controller.h
client/src/connector/: controller.h  requester.cpp  requester.h  sign_buffer.cpp  sign_buffer.h
client/src/game/: context.h  controller.cpp  controller.h  mesh_factory.h
client/src/graphic/: renderer.cpp  settings.h
client/src/user_interface/: key_bindings.h  key_controller.cpp  key_controller.h  view_controller.h  window.cpp
gameClient/: CMakeLists.txt  main.cpp  test.config  test2.config
gameClient/include/data/: login_client.h  login_context.h
gameClient/include/message/: msg_auth.h  msg_info.h
gameClient/res/: license
gameClient/shader/: animated_sprite_vertex.glsl  fragment.glsl  sprite_fragment.glsl  sprite_vertex.glsl  terrain_layer.glsl  vertex.glsl  water_layer.glsl
gameClient/src/SDL/: image.cpp  image.h  renderer.cpp  renderer.h  texture.cpp  texture.h  window.h
gameClient/src/config/: controller.cpp
gameClient/src/connector/: context.cpp  context.h  controller.cpp  controller.h  data.cpp  data.h  requester.cpp  requester.h  sign_buffer.cpp  sign_buffer.h  tcp_receiver.cpp  tcp_receiver.h
gameClient/src/data/: context.cpp  context.h  login_client.cpp  login_client.h  login_context.cpp  login_context.h  map.h  obj_link.h  region_data_link.cpp
gameClient/src/game/: context.cpp  context.h  controller.h  mesh_factory.cpp  mesh_factory.h
gameClient/src/graphic/: animated_sprite_mesh.h  base_mesh.cpp  base_mesh.h  base_texture.cpp  base_texture.h  controller.cpp  controller.h  data_texture.cpp  data_texture.h  img_block_texture.cpp  img_block_texture.h  img_texture.cpp  img_texture.h  layer_mesh.h  mesh.cpp  mesh.h  region_mesh.h  region_mesh_controller.cpp  region_mesh_controller.h  renderer.cpp  renderer.h  settings.h  shader.cpp  shader_program.cpp  shader_program.h  sprite_mesh.h  test.h  texture.cpp  texture.h  texture_controller.cpp  texture_controller.h  window.cpp  window.h
gameClient/src/message/: auth.h  context.cpp  context.h  info.h  msg_auth.cpp  msg_auth.h  msg_info.cpp  msg_info.h
gameClient/src/region/: context.cpp  context.h  controller.cpp  controller.h
gameClient/src/session/: controller.cpp  controller.h
gameClient/src/user_interface/: controller.cpp  controller.h  key_bindings.h  key_controller.cpp  key_controller.h  view_controller.cpp  view_controller.h  view_list.h  window.cpp  window.h
gameServer/: CMakeLists.txt  main.cpp
gameServer/data/: export.ppm
gameServer/include/: user.h  world.h
gameServer/include/data/: map.h  map_controller.h  session_context.h  session_login_server.h
gameServer/include/message/: msg_auth.h  msg_info.h  msg_register.h  msg_unregister.h
gameServer/src/: service_map.cpp
gameServer/src/action/: controller.cpp  controller.h
gameServer/src/connection/: controller.h  sender.h  worker.cpp
gameServer/src/connector/: context.cpp  context.h  controller.cpp  verify_buffer.cpp  verify_buffer.h  worker.cpp  worker.h
gameServer/src/data/: map_controller.h  session_context.cpp  session_context.h  session_login_server.cpp  session_login_server.h
gameServer/src/message/: msg_auth.cpp  msg_auth.h  msg_info.cpp  msg_info.h  msg_register.cpp  msg_register.h  msg_unregister.cpp  msg_unregister.h
gameServer/src/region/: context.cpp  context.h  controller.cpp  controller.h  data.cpp  data.h  update_queue.cpp  update_queue.h
gameServer/src/session/: controller.h  user.cpp  user.h
gameServer/src/user/: controller.cpp  controller.h  info.cpp  info.h
general/: CMakeLists.txt
general/include/authentication/: types.h
general/include/database/: connection.h  prepared_statement.h
general/include/encryption/: randomize.h  rsa.h
general/include/message/: msg_controller.h  msg_header.h  msg_types.h
general/include/util/: config_file.h  error_code.h  execution_pipeline.h  executor.h  mem.h  msg_queue.h  notificator.h  sem.h  sparse_vector.h  sync_container.h  thread_controller.h  timestamp.h  tree.h  wait_lock.h
general/src/authentication/: types.h
general/src/database/: connection.cpp  connection.h  prepared_statement.cpp  prepared_statement.h
general/src/encryption/: base_key.cpp  base_key.h  keygen.cpp  keygen.h  private_key.cpp  private_key.h  public_key.cpp  public_key.h  randomize.h  rsa.cpp  rsa.h
general/src/message/: content.h  msg_controller.cpp  msg_controller.h  msg_header.h  msg_types.h
general/src/region/: dynamic_obj.h  layer.h  static_obj.h  vec2.h  vec3.h
general/src/types/: game_animations.h  game_events.h
general/src/util/: binary.cpp  binary.h  block_queue.h  config_file.cpp  config_file.h  error_code.cpp  error_code.h  event_controller.h  execution_pipeline.h  executor.h  file_storage.cpp  file_storage.h  int.h  lock_ref.h  mem.h  msg_queue.cpp  msg_queue.h  notificator.h  obj_cache.h  optional_ref.h  sem.cpp  sem.h  signals.cpp  signals.h  sparse_vector.h  state_machine.h  sync_container.h  thread_controller.h  timed_object.h  timed_queue.h  timestamp.cpp  tree.h  wait_lock.h  worker.h
keys/: private.pem  (+1 more)
loginClient/: CMakeLists.txt  login_client.h
loginClient/include/: login_client.h
loginClient/include/data/: context.h
loginClient/include/message/: msg_info.h  msg_login.h  msg_logout.h  msg_lookup.h
loginClient/src/data/: context.cpp
loginClient/src/message/: msg_info.cpp  msg_login.cpp  msg_logout.cpp  msg_lookup.cpp
loginServer/: CMakeLists.txt  main.cpp  testConfig.txt
loginServer/include/data/: context.h  login_server_context.h
loginServer/include/message/: msg_auth.h  msg_info.h  msg_login.h  msg_logout.h  msg_lookup.h  msg_register.h  msg_unregister.h
loginServer/src/controller/: login_server_context.cpp  login_server_context.h
loginServer/src/data/: context.cpp  (+2 more)
misc/loginServer/: CMakeLists.txt
server/: CMakeLists.txt  main.cpp
server/data/: terrain.ppm  testLayer.layer  water.ppm
server/keys/: README
(+258 files in other folders)
